fix stop item css / spacing

--- a/src/components/StopListItem/StopListItem.css
+++ b/src/components/StopListItem/StopListItem.css
@@ -1,9 +1,11 @@
 .StopListItem {
-  width: 100%;
+  width: 50%;
   /* grid-column: 1 / 8; */
   /* margin: 1vw 0 1vw 0; */
   border-style: solid;
-  border-width: 1px; 
+  border-width: 0 0 1px 0; 
+  margin: 0 auto 2vh;
+  padding: 1%;
 }
 
 h4 {
