--- a/src/routes/StopListPage/StopListPage.css
+++ b/src/routes/StopListPage/StopListPage.css
@@ -3,5 +3,6 @@
   /* background-color: blue; */
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
+  /* margin: 0 auto; */
 }
